--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,29 @@
+@import url("https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@700;800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+body {
+  @apply leading-[normal] m-0;
+}
+*,
+::before,
+::after {
+  border-width: 0;
+}
+h1{
+  font-family: 'Azonix';
+
+}
+title{
+  font-family: 'Azonix';
+}
+
+
+body{
+  /* background-color: #000; */
+  font-family: "Poppins", sans-serif;
+  /* background: rgb(35,34,48); */
+  background: linear-gradient(0deg, rgb(0, 34, 43) 50%, rgb(0, 121, 118) 100%);
+  user-select: none;
+}
